<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWidth"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/actionBarElevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/settings"
                android:cropToPadding="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/settings_white" />

            <ImageButton
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/settings"
                android:layout_toLeftOf="@+id/settings"
                android:background="@color/transparent"
                android:contentDescription="@string/synching"
                android:cropToPadding="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/cloud_upload_white" />

            <ImageButton
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/upload"
                android:layout_toLeftOf="@+id/upload"
                android:background="@color/transparent"
                android:contentDescription="test"
                android:cropToPadding="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/build_white" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/notconectedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/notconnected"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/checkingserver"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

            <ImageButton
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sync_white"/>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>